[package]
authors = [ "Andrei Gramakov <mail@agramakov.me>" ]
categories = [ "concurrency", "asynchronous" ]
description = "Thread-safe one-to-many publish-subscribe event system. Simple and easy to use. It just works (hopefully)."
edition = "2021"
keywords = [ "publish", "subscribe", "event", "library", "bus" ]
license = "MIT"
name = "pubsub-bus"
readme = "README.md"
repository = "https://github.com/an-dr/pubsub-bus"
version = "3.0.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.dev]
opt-level = 1
